# empty-python-project

./: .dockerignore  Dockerfile  Dockerfile.piptools  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt
src/empty_project/: __init__.py
tests/: test_ci.py
